<resources>
    <string name="app_name">DMCL</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="chi_nhanh">Chi nhánh</string>
    <string name="san_pham">Sản phẩm</string>
    <string name="goi">Gọi</string>
    <string name="gio_hang">Giỏ hàng</string>
    <string name="tai_khoan">Tài khoản</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">343258069463864</string>
    <string name="fb_login_protocol_scheme">fb343258069463864</string>
</resources>
