<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chinhanh"
        android:icon="@drawable/ic_near_me_black_24dp"
        android:title="@string/chi_nhanh" />

    <item
        android:id="@+id/navigation_sanpham"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/san_pham" />

    <item
        android:id="@+id/navigation_goi"
        android:icon="@drawable/ic_phone_black_24dp"
        android:title="@string/goi" />

    <item
        android:id="@+id/navigation_giohang"
        android:icon="@drawable/ic_local_grocery_store_black_24dp"
        android:title="@string/gio_hang" />

    <item
        android:id="@+id/navigation_taikhoan"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/tai_khoan" />

</menu>
